--- a/mydumps(hrs)/digits_recognition_cnn.ipynb
+++ b/mydumps(hrs)/digits_recognition_cnn.ipynb
@@ -2161,9 +2161,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2216,7 +2214,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2230,9 +2228,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
